# code-search-benchmark

./: .gitignore  AGENT_GUIDE.md  BENCHMARK_SUMMARY.md  CONTRIBUTING.md  COPILOT_GREB_GUIDE.md  DJANGO_TEST_QUERIES.md  GITHUB_COMMANDS.md  GITHUB_SETUP.md  GREB_BENCHMARK_RESULTS.md  GREB_IMPROVEMENTS.md  GREB_IMPROVEMENT_RECOMMENDATIONS.md  LICENSE  QUICK_START.md  QUICK_START_IMPROVEMENTS.md  README.md  REPOSITORY_COMPARISON.md  SECURITY.md  SETUP_COMPLETE.md  TEST_RUN_SUMMARY.md  VSCODE_TEST_QUERIES.md  example_config.yaml  pyproject.toml  test-api-latency.ps1
.kiro/specs/code-search-benchmark/: design.md  requirements.md  tasks.md
benchmark/: __init__.py  cli.py  config.py  models.py
benchmark/agents/: __init__.py  api_agent.py  base.py  cli_agent.py  keyword_search.py  llm_agent.py  mcp_agent.py
benchmark/dataset/: __init__.py  commit_analyzer.py  commit_filter.py  dataset_generator.py  query_transformer.py
benchmark/evaluation/: __init__.py  engine.py
benchmark/metrics/: __init__.py  calculator.py
benchmark/reporting/: __init__.py  report_generator.py
examples/: README.md  custom_agent_example.py  evaluate_copilot_greb.py  evaluate_custom_agent.py  evaluate_greb_automated.py
